welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:27: error: value toInt_= is not a member of scala.collection.immutable.StringOps
     litMessage().toInt=x
                  ^